--- a/google.css
+++ b/google.css
@@ -3,14 +3,21 @@
 }
 
 .button {
-
+display: block;
+margin-left: auto;
+margin-right: auto;
 }
 
 .logo-img {
     display: block;
     width: 300px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .Search {
     display: block;
     width: 400px;
+    margin-left: auto;
+    margin-right: auto;
 }
