--- a/google.css
+++ b/google.css
@@ -2,10 +2,18 @@
     margin-top: 100px;
 }
 
-.button {
+.btn {
 display: block;
 margin-left: auto;
 margin-right: auto;
+margin-top: 30px;
+padding-top: 8px;
+padding-left: 16px;
+padding-bottom: 8px;
+padding-right: 16px;
+font-size: 15px;
+border:none;
+border-radius: 2px;
 }
 
 .logo-img {
@@ -20,4 +28,13 @@ margin-right: auto;
     width: 400px;
     margin-left: auto;
     margin-right: auto;
+    line-height: 24px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    border-radius: 24px;
+    border: 1px solid #dfe1e5;
+
 }
+
