--- a/twitter.css
+++ b/twitter.css
@@ -1,7 +1,11 @@
-.button {
+button {
     color: #0f1419;
     border:solid #cfd9de;
     background: white;
-    border-radius: 2px;
+    border-radius: 20px;
     font-weight: bold;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
