--- a/google.css
+++ b/google.css
@@ -1,11 +1,16 @@
 .main {
     margin-top: 100px;
+    
+}
+
+.btn-wrapper {
+    display: flex;
+    justify-content: center;
 }
 
 .btn {
-display: block;
-margin-left: auto;
-margin-right: auto;
+margin-left: 4px;
+margin-right: 4px;    
 margin-top: 30px;
 padding-top: 8px;
 padding-left: 16px;
