--- a/solo.css
+++ b/solo.css
@@ -21,7 +21,7 @@ img {
 }
 
 .desc {
-    margin: 0;
+    margin-bottom: 20px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
